# paral1

./: CMakeLists.txt  main.cpp
